--- a/assets/scss/components/_instructors.scss
+++ b/assets/scss/components/_instructors.scss
@@ -3,6 +3,10 @@
   background-repeat: no-repeat;
   background-position: left top 34rem;
 
+  &__card {
+    width: 100%;
+  }
+
   &__container {
     display: flex;
     justify-content: center;
@@ -68,6 +72,7 @@
   &__links {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     justify-content: center;
     margin-top: 2em;
 
